--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<title>Code Smells</title>
 	</head>
 	<body>
-		<h1>Code Smells</h1>
+		<div class="nav">
+			<h1 class="title">Code Smells</h1>
+		</div>
 		<ul id="tweets"></ul>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="js/script.js"></script>
